--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -1,4 +1,4 @@
 process.env.DB_NAME='ecommerce_db'
-process.env.DB_USER=''
-process.env.DB_PW=''
+process.env.DB_USER='root'
+process.env.DB_PW='Admin01#'
 
